--- a/package.json
+++ b/package.json
@@ -9,28 +9,49 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@aws-sdk/lib-storage": "^3.948.0",
+    "@payloadcms/db-postgres": "3.0.0-beta.135",
+    "@payloadcms/next": "3.0.0-beta.135",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.135",
+    "@payloadcms/storage-s3": "3.0.0-beta.135",
+    "@payloadcms/ui": "3.0.0-beta.135",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/supabase-js": "^2.87.1",
     "@tailwindcss/typography": "^0.5.19",
+    "alipay-sdk": "^4.14.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.31.8",
+    "esbuild": "0.19.12",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.7",
+    "next": "15.1.6",
     "next-auth": "5.0.0-beta.30",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "payload": "3.0.0-beta.135",
+    "pg": "^8.16.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "sharp": "^0.34.5",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
+    "wechatpay-node-v3": "^2.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/pg": "^8.16.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
