--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_OPTIONS='--dns-result-order=ipv4first' next build",
     "start": "next start",
     "lint": "eslint"
   },
